...
          headerTintColor: "#FFFFFF",
          headerTitleStyle: {
            fontWeight: "bold",
          },
        }}
      >
        <SearchStack.Screen name="SearchStocks" component={SearchScreen} options={{ title: "Search Stocks" }} />
        <SearchStack.Screen name="AddStock" component={AddStockScreen} options={{ title: "Add to Portfolio" }} />
        <SearchStack.Screen name="StockDetail" component={StockDetailScreen} options={{ title: "Stock Details" }} />
      </SearchStack.Navigator>
    );
  }

...
